--- a/css/style.css
+++ b/css/style.css
@@ -453,3 +453,40 @@ figure > img {
     width: 410px;
 } */
 
+.benefits {
+    background-color: #9792E4;
+    padding: 60px 0px;
+}
+
+.card-benefits {
+    border: 1px solid black;
+    background-color: var(--light);
+    height: 100%; 
+    border-radius: 20px;
+}
+
+.number-card-benefits {
+    color: var(--purple);
+    font-size: 70px;
+    padding: 45px 0px 0px 40px ;
+}
+
+.title-card-benefits {
+    color: var(--purple);
+    font-size: 25px;
+    font-weight: 900;
+    padding: 20px 0px 0px 40px;
+}
+
+.paragraph-card-benefits {
+    font-size: 14px;
+    line-height: 20px;
+    padding: 20px 20px 20px 40px;
+}
+
+.button-purple {
+    background-color: var(--purple);
+    color: white;
+    margin: 0px 0px 30px 40px;
+    padding: 0px 30px;
+}
