--- a/css/style.css
+++ b/css/style.css
@@ -164,6 +164,7 @@ figure > img {
     padding: 0;
 }
 
+/* card hero */
 .title-card {
     font-size: 20px;
     padding-top: 10px;
@@ -219,7 +220,7 @@ figure > img {
     font-size: 12px;
 }
 
-
+/* card developement */
 .card-developement {
     background-color: var(--light);
     border-radius: 20px;
@@ -274,6 +275,7 @@ figure > img {
     padding: 20px 0px;
 }
 
+/* cards testimonials */
 .cards-testimonials {
     background-color: #9792E4;
     border-radius: 30px;
@@ -315,6 +317,7 @@ figure > img {
     text-align: center;
 }
 
+/* cards benefits */
 .card-benefits {
     background-color: var(--light);
     height: 100%; 
@@ -371,9 +374,6 @@ figure > img {
     }
 
     /* STRATEGIC-PLANNER */
-    /* .strategic-planner[class^='col-'] {
-        width: 100%;
-    } */
 
     .strategic-planner .col-6 {
         flex-basis: 100%;
@@ -485,8 +485,9 @@ figure > img {
     }
 
 }
-/* debug */
 
+
+/* debug */
 .debug .container,
 .debug .container-medium,
 .debug .container-small  {
@@ -504,8 +505,3 @@ figure > img {
     border: 1px solid orange;
     padding: 10px;
 }
-
-/* .planning-img {
-    width: 410px;
-} */
-
