--- a/css/style.css
+++ b/css/style.css
@@ -44,8 +44,8 @@ figure > img {
     --light:#FFFFFF;
 
 }
-/* layouts */
 
+/* layouts */
 .container {
     max-width: 1164px;
     margin: 0 auto;
@@ -91,7 +91,6 @@ figure > img {
 }
 
 /* utility classes */
-
 .flex-column {
     flex-direction: column;
 }
@@ -188,7 +187,7 @@ figure > img {
     padding-top: 10px;
     padding-right: 10px;
     padding-left: 10px;
-    padding-bottom: 10px;
+    margin-bottom: 20px;
     line-height: 25px;
 }
 
@@ -511,7 +510,7 @@ q {
     color: #9792E4;
 }
 
-/* Responsive */
+/* RESPONSIVE */
 /* TABLET */
 @media (max-width: 770px) {
     
